Updated the assembly definitions names.
This was done to better match the package having Utility functions for non editor stuff as well.

--- a/Editor/SF Utilities Editor.asmdef
+++ b/Editor/SF Utilities Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "SFEditorUtilities",
+    "name": "SF.Utilities.Editor",
     "rootNamespace": "SF.Editor",
     "references": [],
     "includePlatforms": [
