--- a/Runtime/SF Utilities.asmdef
+++ b/Runtime/SF Utilities.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "SFUtilities",
+    "name": "SF.Utilities",
     "rootNamespace": "SF.Utilities",
     "references": [],
     "includePlatforms": [],
