Renamed the assembly files to the new standard of SFEditor instead of SF.Editor
This prevents any possible conflicts with namespaces and scripts just called editor. Also makes intellisense a lot easier to see that people want the SFEditor namespace.

--- a/Editor/SFEditor.Utilities.asmdef
+++ b/Editor/SFEditor.Utilities.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "SF.Utilities.Editor",
-    "rootNamespace": "SF.Editor",
-    "references": [],
+    "name": "SFEditor.Utilities",
+    "rootNamespace": "SFEditor.Utilities",
+    "references": [
+        "GUID:a36038c41c31fd4468a7b4729e0e6ae4"
+    ],
     "includePlatforms": [
         "Editor"
     ],
