--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "shatter-fantasy.sf-utilities",
   "version": "0.0.5",
-  "displayName": "SF Utilities",
   "description": "This is the utilities classes developed by\nJonathan Westfall of Shatter Fantasy studio.",
+  "displayName": "SF Utilities",
+  "unity": "2023.2",
+  "author": {
+    "name": "Jonathan Westfall - Shatter Fantasy",
+    "url": "https://www.linkedin.com/in/jonathan-westfall-shatter-fantasy/"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@USER"
+  },
   "documentationUrl": "",
   "keywords": [
     "Utilities",
-    "Asset Database",
     "Shatter Fantasy",
     "Jonathan Westfall",
     "Community Package"
   ],
-  "category": "Template",
-  "author": {
-    "name": "Jonathan Westfall",
-    "url": "https://github.com/Shatter-Fantasy"
-  },
+  "category": "Utilities",
   "repository": {
     "url": "https://github.com/Shatter-Fantasy/SF-Utilities",
     "type": "git"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/Shatter-Fantasy"
-  },
   "_upm": {
     "changelog": ""
-  },
-  "unity": "2023.2"
+  }
 }
