Updated the Package manifest file to use the proper Git registry end point for a public release.
Changed:
1. Updated the registry from @user to @Shatter-Fantasy now that it is being prepped for public use.
2. Updated the url to use the ssh url for Git repos. This is for future testing of scoped registries.
3. Went ahead and made the hideInEditor set to false so users can easily go through the files in the project tab in the Unity Editor.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://www.linkedin.com/in/jonathan-westfall-shatter-fantasy/"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@USER"
+    "registry": "https://npm.pkg.github.com/@Shatter-Fantasy"
   },
   "documentationUrl": "",
   "keywords": [
@@ -20,10 +20,12 @@
   ],
   "category": "Utilities",
   "repository": {
-    "url": "https://github.com/Shatter-Fantasy/SF-Utilities.git",
-    "type": "git"
+    "url": "ssh://git@github.com:Shatter-Fantasy/SF-Utilities.git",
+    "type": "git",
+    "directory": "shatter-fantasy.sf-utilities"
   },
   "_upm": {
     "changelog": ""
-  }
+  },
+  "hideInEditor": false
 }
